@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2009-03-08  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/paint/bonds/chaintool.cc: dont resize the atom array
+	when not needed.
+
 2009-03-06  Jean Bréfort  <jean.brefort@normalesup.org>
 	* glade/crystal/prefs.glade: set page size to 0 for spin buttons to
 	avoid a warning when using gtk+-2 >= 2.14.0.
